--- a/exercice2/style.css
+++ b/exercice2/style.css
@@ -2,5 +2,15 @@
     width: 100px;
     height: 100px;
     background: red;
+    animation-name: bgChange;
+    animation-duration: 5s;
 }
 
+@keyframes bgChange {
+    from {
+        background-color: red;
+    }
+    to {
+        background-color: green;
+    }
+}
