--- a/exercice3/style.css
+++ b/exercice3/style.css
@@ -8,6 +8,25 @@
 }
 
 @keyframes exercice3 {
-
+    0% {
+        background-color: red;
+        left: 0;
+        top: 0;
+    }
+    25% {
+        background-color: blue;
+        left: 0;
+        top: 200px;
+    }
+    75% {
+        background-color: green;
+        left: 200px;
+        top: 200px;
+    }
+    100% {
+        background-color: red;
+        top: 0;
+        left: 0;
+    }
 
 }
