--- a/exobonus2/exobonus2.css
+++ b/exobonus2/exobonus2.css
@@ -39,8 +39,17 @@
 #helice {
     animation-name: rotHelice;
     animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 @keyframes rotHelice {
-
+    from {
+        transform-origin: 125px 150px;
+        transform: rotate(0);
+    }
+    to {
+        transform-origin: 125px 150px;
+        transform: rotate(180deg);
+    }
 }
